--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Grilled Cheese</h1>
+        <img src="../images/viking.jpg" alt="Grilled Cheese image">
     </body>
 </html>
