Add page content to grilled-cheese.html

--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -7,5 +7,25 @@
     <body>
         <h1>Grilled Cheese</h1>
         <img src="../images/viking.jpg" alt="Grilled Cheese image">
+        <h2>Description</h2>
+        <p>Few things warm up the spirit like a fresh, gooey, grilled cheese.</p>
+        <p>The following recipe ensures that your sandwich will be the talk of the town.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Bread</li>
+            <li>Butter</li>
+            <li>Cheese</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Turn on the stove burner to medium with a skillet on it</li>
+            <li>Allow the butter and cheese to warm to room temperature</li>
+            <li>Spread an even coating of butter on one side of each bread slice</li>
+            <li>Place one piece of bread, butter side down, in the preheated pan</li>
+            <li>Add the slice of cheese to the bread</li>
+            <li>Place the other piece of bread on the cheese, butter side up</li>
+            <li>After two minutes, or when the cheese has melted enough to hold the bread together, flip the sandwich</li>
+            <li>Cook for about one more minute, until bread is toasted but not burnt</li>
+        </ol>
     </body>
 </html>
