--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/grilled-cheese.html">Grilled Cheese</a>
+        <a href="./recipes/oatmeal.html">Oatmeal</a>
+        <a href="./recipes/cereal.html">Cereal</a>
     </body>
 </html>
