Replace placeholder images with correct images

--- a/recipes/cereal.html
+++ b/recipes/cereal.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Oatmeal</h1>
-        <img src="../images/viking.jpg" alt="Placeholder image">
+        <img src="../images/cereal.jpg" alt="Cereal image">
         <h2>Description</h2>
         <p>Are you so old you forgot what is at the bottom of your cereal box?</p>
         <p>If so, head to your store, pick one up, and follow along with this recipe to find out.</p>
