--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Grilled Cheese</h1>
-        <img src="../images/viking.jpg" alt="Grilled Cheese image">
+        <img src="../images/grilled-cheese.jpg" alt="Grilled Cheese image">
         <h2>Description</h2>
         <p>Few things warm up the spirit like a fresh, gooey, grilled cheese.</p>
         <p>The following recipe ensures that your sandwich will be the talk of the town.</p>
