--- a/recipes/oatmeal.html
+++ b/recipes/oatmeal.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Oatmeal</h1>
-        <img src="../images/viking.jpg" alt="Placeholder image">
+        <img src="../images/oatmeal.jpg" alt="Oatmeal image">
         <h2>Description</h2>
         <p>Want to start your day right? Well if so, I have a secret for you...</p>
         <p>Oatmeal contains all the whole grains and nutrients you will need to be a breakfast hero.</p>
