Fix cereal.html h1 name

--- a/recipes/cereal.html
+++ b/recipes/cereal.html
@@ -5,7 +5,7 @@
         <title>Cereal - Odin Recipes</title>
     </head>
     <body>
-        <h1>Oatmeal</h1>
+        <h1>Cereal</h1>
         <img src="../images/cereal.jpg" alt="Cereal image">
         <h2>Description</h2>
         <p>Are you so old you forgot what is at the bottom of your cereal box?</p>
